include/Win64/Cg.GL.hpp

//-- forward type declarations -----------------------------------------------
//-- type declarations -------------------------------------------------------
typedef unsigned TCGGLenum;
typedef unsigned CGGLenum;
//-- var, const, procedure ---------------------------------------------------
#define CgGLlibrary L"cgGL.dll"
extern "C" int __cdecl cgGLIsProfileSupported(Cg::Import::TCGprofile profile);
extern "C" void __cdecl cgGLEnableProfile(Cg::Import::TCGprofile profile);
extern "C" void __cdecl cgGLDisableProfile(Cg::Import::TCGprofile profile);
extern "C" Cg::Import::TCGprofile __cdecl cgGLGetLatestProfile(unsigned profile_type);
extern "C" void __cdecl cgGLSetOptimalOptions(Cg::Import::TCGprofile profile);
extern "C" void __cdecl cgGLLoadProgram(Cg::Import::PCGprogram _program);
extern "C" int __cdecl cgGLIsProgramLoaded(Cg::Import::PCGprogram _program);
extern "C" void __cdecl cgGLBindProgram(Cg::Import::PCGprogram _program);
extern "C" void __cdecl cgGLUnbindProgram(Cg::Import::TCGprofile profile);
extern "C" unsigned __cdecl cgGLGetProgramID(Cg::Import::PCGprogram _program);
extern "C" void __cdecl cgGLSetParameter1f(Cg::Import::PCGparameter param, float x);
extern "C" void __cdecl cgGLSetParameter2f(Cg::Import::PCGparameter param, float x, float y);
extern "C" void __cdecl cgGLSetParameter3f(Cg::Import::PCGparameter param, float x, float y, float z);
extern "C" void __cdecl cgGLSetParameter4f(Cg::Import::PCGparameter param, float x, float y, float z, float w);
extern "C" void __cdecl cgGLSetParameter1fv(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameter2fv(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameter3fv(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameter4fv(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameter1d(Cg::Import::PCGparameter param, double x);
extern "C" void __cdecl cgGLSetParameter2d(Cg::Import::PCGparameter param, double x, double y);
extern "C" void __cdecl cgGLSetParameter3d(Cg::Import::PCGparameter param, double x, double y, double z);
extern "C" void __cdecl cgGLSetParameter4d(Cg::Import::PCGparameter param, double x, double y, double z, double w);
extern "C" void __cdecl cgGLSetParameter1dv(Cg::Import::PCGparameter param, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameter2dv(Cg::Import::PCGparameter param, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameter3dv(Cg::Import::PCGparameter param, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameter4dv(Cg::Import::PCGparameter param, const System::PDouble v);
extern "C" void __cdecl cgGLGetParameter1f(Cg::Import::PCGparameter param, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameter2f(Cg::Import::PCGparameter param, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameter3f(Cg::Import::PCGparameter param, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameter4f(Cg::Import::PCGparameter param, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameter1d(Cg::Import::PCGparameter param, System::PDouble v);
extern "C" void __cdecl cgGLGetParameter2d(Cg::Import::PCGparameter param, System::PDouble v);
extern "C" void __cdecl cgGLGetParameter3d(Cg::Import::PCGparameter param, System::PDouble v);
extern "C" void __cdecl cgGLGetParameter4d(Cg::Import::PCGparameter param, System::PDouble v);
extern "C" void __cdecl cgGLSetParameterArray1f(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameterArray2f(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameterArray3f(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameterArray4f(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLSetParameterArray1d(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameterArray2d(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameterArray3d(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble v);
extern "C" void __cdecl cgGLSetParameterArray4d(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble v);
extern "C" void __cdecl cgGLGetParameterArray1f(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameterArray2f(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameterArray3f(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle v);
using namespace Cg;